income&expenditure combine finish

--- a/final_chemin/src/main/webapp/resources/acbook/css/pgBar.css
+++ b/final_chemin/src/main/webapp/resources/acbook/css/pgBar.css
@@ -8,7 +8,7 @@
 	font-family: 'Open Sans', sans-serif;
 }
 #msform fieldset {
-	background: white;
+	background: rgba(236, 240, 241);
     border: 0 none;
     border-radius: 3px;
     padding: 20px 30px;
@@ -17,7 +17,9 @@
     margin: auto;
     position: relative;
 }
-
+#newMain {
+	background-color: rgba(236, 240, 241);
+}
 /*Hide all except first fieldset*/
 #msform fieldset:not(:first-of-type) {
 	display: none;
@@ -162,22 +164,26 @@ font-weight:bold;
     
 }
 
-
+/* option Button BackGround */
 .phone-bx {
     vertical-align: top;
     width: 15%!important;
-    background: inherit!important;
+    background-color: LightSteelBlue ;
     border: solid 1px #ececec !important;
-    font-weight: normal;
+    font-weight: bold;
     color: #000000!important;
     border: 0 none;
     border-radius: 0px;
     cursor: pointer;
-    padding: 10px 35px 10px 35px!important;
+    padding: 0;
     margin: 10px 5px;
     font-size: 14px;
     height: 100px;
 	border-radius:8px;
+}
+.phone-bx img{
+	width:80px;
+	height:80px;
 }
 .phone-bx span{
 	display:none;
@@ -190,7 +196,7 @@ font-weight:bold;
 	border-radius:8px;	
 }
 .phone-bx img{
-margin: 80px auto;
+margin: 0%; auto;
 }
 .brand-bxa
 {
