--- a/final_chemin/src/main/webapp/resources/acbook/css/acMain.css
+++ b/final_chemin/src/main/webapp/resources/acbook/css/acMain.css
@@ -1,9 +1,14 @@
 @charset "UTF-8";
-.card-content{
+/* .card-content{
 margin:5%;
 object-fit:contain;
 width: 100%;
 height: 100%;
+} */
+.card-content {
+	background: #ffffff;
+	border: 4px;
+	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
 }
 /* 메인 배경색 */
 #newMain {
