--- a/final_chemin/src/main/webapp/resources/acbook/fullcalendar/fullcalendar.css
+++ b/final_chemin/src/main/webapp/resources/acbook/fullcalendar/fullcalendar.css
@@ -47,7 +47,9 @@ body .fc {
   font-size: 1em;
   /* normalize */
   white-space: nowrap;
-  cursor: pointer; }
+  cursor: pointer;
+  background-color:salmon;
+   }
 
 /* Firefox has an annoying inner border */
 .fc button::-moz-focus-inner {
@@ -60,13 +62,13 @@ body .fc {
 
 .fc-state-default.fc-corner-left {
   /* non-theme */
-  border-top-left-radius: 4px;
-  border-bottom-left-radius: 4px; }
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px; }
 
 .fc-state-default.fc-corner-right {
   /* non-theme */
-  border-top-right-radius: 4px;
-  border-bottom-right-radius: 4px; }
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px; }
 
 /* icons in buttons */
 .fc button .fc-icon {
@@ -828,7 +830,10 @@ NOTE: use percentage font sizes or else old IE chokes
 
 /* button layering (for border precedence) */
 .fc-toolbar button {
-  position: relative; }
+  position: relative;
+  background-color:'salmon';
+  color:'salmon';
+   }
 
 .fc-toolbar .fc-state-hover,
 .fc-toolbar .ui-state-hover {
