커뮤니티 수정, admin 수정

--- a/final_chemin/src/main/webapp/resources/mall/css/util.css
+++ b/final_chemin/src/main/webapp/resources/mall/css/util.css
@@ -3015,6 +3015,11 @@ TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT TEXT
 /*[ S-Text 0 - 15 ]
 ///////////////////////////////////////////////////////////
 */
+.s-text2-change{
+	font-family: Montserrat-Regular;
+	font-size: 15px;
+	color: #111111;
+}
 .s-text1 {
 	font-family: Montserrat-Regular;
 	font-size: 15px;
